Refactored gettng base path of a path into function in FileUtils. Added logic to remove former decomposed files which are not part of the new decomposed files.